kubernetes/app/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - port: 80
      targetPort: 80
      name: http
